@@ -1,5 +1,6 @@
 Version 2.02.88 - 
 ==================================
+  When down-converting RAID1, don't activate sub-lvs between suspend/resume
   Add -V as short form of --virtualsize in lvcreate.
   Fix make clean not to remove Makefile.  (2.02.87)
 
